using Data.Entities;

namespace Data.Interfaces;

public interface ICategoryRepository : IRepository<ProductCategory>
{
}
