using Data.Entities;

namespace Data.Interfaces;

public interface IPersonRepository : IRepository<Person>
{
}
